--- a/templates/results.html
+++ b/templates/results.html
@@ -6,6 +6,7 @@
 <body>
     result of addition : {{ msg }}
 <h2><a href="/">main page</a></h2>
+<h3><a href="/show-students-data">Student-Data</a></h3>
 
 </body>
 </html>
